--- a/config/dse_config.h.in
+++ b/config/dse_config.h.in
@@ -1,4 +1,9 @@
+#ifndef CONFIG_DSE_CONFIG_H
+#define CONFIG_DSE_CONFIG_H
+
 #define DSE_VERSION_MAJOR @dse_VERSION_MAJOR@
 #define DSE_VERSION_MINOR @dse_VERSION_MINOR@
 #define DSE_VERSION_STRING "@dse_VERSION_MAJOR@.@dse_VERSION_MINOR@.0.0"
 #cmakedefine DSE_MULTISAMPLE @DSE_MULTISAMPLE@
+
+#endif // CONFIG_DSE_CONFIG_H
