--- a/config/dse_config.h.in
+++ b/config/dse_config.h.in
@@ -5,5 +5,6 @@
 #define DSE_VERSION_MINOR @dse_VERSION_MINOR@
 #define DSE_VERSION_STRING "@dse_VERSION_MAJOR@.@dse_VERSION_MINOR@.0.0"
 #cmakedefine DSE_MULTISAMPLE @DSE_MULTISAMPLE@
+#cmakedefine DSE_THREADPOOL_TASKS_PER_IO @DSE_THREADPOOL_TASKS_PER_IO@
 
 #endif // CONFIG_DSE_CONFIG_H
