--- a/rc_win32/res.rc
+++ b/rc_win32/res.rc
@@ -6,18 +6,18 @@ FILEVERSION DSE_VERSION_MAJOR,DSE_VERSION_MINOR,0,0
 PRODUCTVERSION DSE_VERSION_MAJOR,DSE_VERSION_MINOR,0,0
 FILEFLAGSMASK 0
 FILEFLAGS 0
-FILEOS VOS_NT
+FILEOS VOS_NT_WINDOWS32
 FILETYPE VFT_APP
 FILESUBTYPE VFT2_UNKNOWN
 BEGIN
   BLOCK "StringFileInfo"
   BEGIN
-    BLOCK "000004e4"
+	BLOCK "000004b0"
     BEGIN
       VALUE "CompanyName", "disba1ancer"
       VALUE "FileDescription", "DSE Demo"
 	  VALUE "FileVersion", DSE_VERSION_STRING
-      VALUE "InternalName", "dse"
+	  VALUE "InternalName", "dse"
       VALUE "LegalCopyright", "Copyright (C) disba1ancer 2020"
       VALUE "OriginalFilename", "dse.exe"
       VALUE "ProductName", "DSE Demo"
