--- a/config/dse_config.h.in
+++ b/config/dse_config.h.in
@@ -6,5 +6,6 @@
 #define DSE_VERSION_STRING "@dse_VERSION@"
 #cmakedefine DSE_MULTISAMPLE @DSE_MULTISAMPLE@
 #cmakedefine DSE_THREADPOOL_TASKS_PER_IO @DSE_THREADPOOL_TASKS_PER_IO@
+#cmakedefine DSE_RENDER_GC_OBJECTS_PER_FRAME @DSE_RENDER_GC_OBJECTS_PER_FRAME@
 
 #endif // CONFIG_DSE_CONFIG_H
