Reworked asynchronous primitives
Added senders/receivers based on P2300
Changed naming style
Removed future class
Removed some old stuff

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,5 @@
 [submodule "swal"]
 	path = swal
 	url = git@github.com:disba1ancer/swal.git
+[submodule "swal/"]
+	url = https://github.com/disba1ancer/swal.git
