--- a/config/dse_config.h.in
+++ b/config/dse_config.h.in
@@ -3,6 +3,8 @@
 
 #define DSE_VERSION_MAJOR @dse_VERSION_MAJOR@
 #define DSE_VERSION_MINOR @dse_VERSION_MINOR@
+#define DSE_VERSION_PATCH @dse_VERSION_PATCH@
+#define DSE_VERSION_TWEAK @dse_VERSION_TWEAK@
 #define DSE_VERSION_STRING "@dse_VERSION@"
 #cmakedefine DSE_MULTISAMPLE @DSE_MULTISAMPLE@
 #cmakedefine DSE_THREADPOOL_TASKS_PER_IO @DSE_THREADPOOL_TASKS_PER_IO@
