--- a/rc_win32/res.rc
+++ b/rc_win32/res.rc
@@ -2,8 +2,8 @@
 #include "dse_config.h"
 
 1 VERSIONINFO
-FILEVERSION DSE_VERSION_MAJOR,DSE_VERSION_MINOR,0,0
-PRODUCTVERSION DSE_VERSION_MAJOR,DSE_VERSION_MINOR,0,0
+FILEVERSION DSE_VERSION_MAJOR,DSE_VERSION_MINOR,DSE_VERSION_PATCH,DSE_VERSION_TWEAK
+PRODUCTVERSION DSE_VERSION_MAJOR,DSE_VERSION_MINOR,DSE_VERSION_PATCH,DSE_VERSION_TWEAK
 FILEFLAGSMASK 0
 FILEFLAGS 0
 FILEOS VOS_NT_WINDOWS32
