--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_executable(demo)
 
-target_link_libraries(demo PRIVATE core ogl31rbe)
+target_link_libraries(demo PRIVATE core ogl31video)
 target_link_options(demo PRIVATE
     $<$<BOOL:${DSE_SUBSYSTEM_WINDOWS}>:${DSE_SUBSYSTEM_WINDOWS_LINK_OPTIONS}>
 )
@@ -12,6 +12,7 @@ target_sources(demo PRIVATE
 )
 
 if (${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
+FetchContent_MakeAvailable(swal)
 target_link_libraries(demo PRIVATE swal::swal)
 target_sources(demo PRIVATE
     rc_win32/icon.ico
